# yaap

./: CMakeLists.txt  README.md
include/yaap/: argument.h  command.h  errors.h  flag.h  util.h  yaap.h
src/: CMakeLists.txt  argument.cpp  command.cpp  flag.cpp
test/: CMakeLists.txt  test_root_parser.cpp
